# VoxelConeTracing-OpenGL

./: .gitignore  CMakeLists.txt  README.md  plan.txt
assets/shaders/: debug_buffer.frag  deferred_light.frag  scene.frag  scene.vert  shadow_scene.frag  shadow_scene.vert  ssao.frag  ssao_blur.frag
include/: app_input.h  camera.h  g_buffer_resources.h  graphics_util.h  model_loader.h  scene_gpu_resources.h  scene_gpu_resources_runtime.h  scene_raw.h  vertices.h
src/: app_input.cpp  g_buffer_resources.cpp  graphics_util.cpp  main.cpp  model_loader.cpp  scene_gpu_resources.cpp  scene_gpu_resources_runtime.cpp
